# phantom

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ci_integration.py  scan_agent.py  scan_chatbot.py
src/phantom/: __init__.py  __main__.py  cli.py  exceptions.py  logging.py  models.py  redteam.py  target.py
src/phantom/atlas/: __init__.py  mapper.py  report.py  taxonomy.py
src/phantom/atlas/data/: techniques.json
src/phantom/attacks/: __init__.py  generator.py  mutations.py  strategies.py
src/phantom/learner/: __init__.py  policy.py  reward.py  trainer.py
tests/: conftest.py  test_cli.py  test_generator.py  test_integration.py  test_mapper.py  test_models.py  test_mutations.py  test_policy.py  test_redteam.py  test_report.py  test_reward.py  test_strategies.py  test_target.py  test_taxonomy.py  test_trainer.py
